--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Arial', sans-serif;
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -7,80 +7,56 @@ body {
 .firstPage {
     height: 100vh;
 }
-
-
+.SecondPage {
+    height: 100vh;
+}
 
 
 .video-background {
     position: relative;
-    width: 100%;
     height: 70vh;
-    overflow: hidden;
+    /* width: 100%;
+    overflow: hidden; */
 }
 .video-background video {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    filter: brightness(70%);
-    transform: translate(-50%, -50%);
+    filter: brightness(80%);
     width: 100%;
     height: 100%;
     object-fit: cover;
-    /* animation:  1s ease-out infinite; */
-
+    z-index: -1;
 }
 
-
-
-
-
-.navbarOne {
+.navbar {
     z-index: 1;
-    position: absolute;
     display: flex;
-    flex-direction: row;
-    width: 100%;
     height: 60px;
     justify-content: space-around;
-    /* box-shadow: #000000 0px 0px 1px; */
-    /* background-color: rgba(0, 0, 0, 0.2); */
 }
-
-
-
 .Websitelogo {
     width: 10vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: rgb(255,230,50,); */
 }
 .Websitelogo img {
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
 }
 
-
-
-
-
-
 .serachbar {
-    width: 60vw;
+    width: 70vw;
     height: 20px;
     display: flex;
     justify-content: center;
     align-self: center;
-    display: flex;
-    justify-self: center;
     align-items: center;
     padding: 10px;
     border-radius: 28px;
     background-color: rgba(255, 255, 255, 0.2);
 }
 .serachbar input {
-    width: 90%;
-    margin: 0;
+    width: 100%;
     font-size: medium;
     outline: none;
     border: none;
@@ -91,72 +67,60 @@ body {
     color: rgb(0, 0, 0, 0.5);
 }
 .serachbar img {
-    height: 40%;
     width: 40%;
     display: block;
-    margin: 0 auto;
+    margin: auto;
     object-fit: contain;
+    cursor: pointer;
 }
 
 
-
-
-
-
-.navOne {
-    width: 15vw;
+.Smallnav {
+    width: 5vw;
 }
-.navOne ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 100%;
-}
-.navbarOne .navOne a {
+.Smallnav a {
     text-decoration: none;
     color: white;
 }
-.navbarOne .navOne ul {
+.Smallnav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    gap: 10px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 100%;
 }
 
-
-
-
-
 .LoginButton {
     width: 5vw;
+}
+.LoginButton a {
+    text-decoration: none;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    width: 100%;
+    height: 100%;
+    color: black;
 }
 .LoginButton button {
-    width: 100%;
     height: 60%;
-    border-radius: 100px ;
-    border: black 2px solid;
-    background-color: transparent;
+    width: 100%;
+    border-radius: 28px ;
     border: none;
     color: rgb(0, 0, 0);
     font-size: medium;
     font-weight: bold;
     cursor: pointer;
     background-color: rgb(255,230,50);
+    /* background-color: rgb(50, 204, 255); */
+    /* background-color: rgb(255, 50, 204); */
+    /* background-color: rgb(50, 180, 255); */
 }
 
 
-
 .homeText {
-    /* margin-block-start: 0px;
-    margin-block-end: 0px; */
     margin: 0px 0px 0px 0px;
     padding: 0;
     position: absolute;
@@ -176,7 +140,6 @@ body {
 }
 
 
-
 .Getstarted {
     position: absolute;
     top: 80%;
@@ -190,8 +153,6 @@ body {
     border-radius: 100px;
     background-color: rgb(255,230,50);
     color: black;
-    font-size: medium;
-    font-weight: bold;
     cursor: pointer;
 }
 .Getstarted button {
@@ -204,52 +165,19 @@ body {
 }
 
 
-
-
-
-
-
-
-.navbarTwo {
-    z-index: 1;
-    top: 60px;
-    position: absolute;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 40px;
-    justify-content: space-around;
-    /* box-shadow: #000000 0px 0px 1px; */
-    /* background-color: rgba(0, 0, 0, 0.1); */
-}
-.navbarTwo ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 100%;
-    list-style-type: none;
-}
-.navbarTwo a {
-    text-decoration: none;
-    color: white;
-}
-
-
-
-
-
 .threeSections {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: rgb(255, 255, 255);                                                     
+    background-color: rgb(222, 232, 177);                                                     
 }
 .threeSections .section {
     width: 200px;
     margin: 0;
     padding: 0;
     border: #000000 1px solid;
+    background: #ffffff;
     border-radius: 10px;
     height: 150px;
     align-items: center;
@@ -260,8 +188,6 @@ body {
     text-decoration: none;
     color: black;
 }
-
-
 
 
 
