--- a/Register.css
+++ b/Register.css
@@ -8,7 +8,7 @@ body {
     align-items: center;
     height: 100vh;
 }
-.form {
+.formArea {
     width: 400px;
     height: 600px;
     background-color: #fff;
@@ -26,7 +26,7 @@ hr{
 }
 h1 {
     text-align: center;
-    padding: 20px 0;
+    padding: 0;
 }
 
 .form {
@@ -43,7 +43,7 @@ h1 {
     margin: 5px 20px 20px 0px;
     padding: 10px 10px 10px 10px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 15px;
     outline: none;
 }
 
@@ -54,6 +54,5 @@ h1 {
     border: none;
     height: 60px;
     padding: 10px;
-    border-radius: 5px;
     cursor: pointer;
 }
