--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,14 @@ body {
     padding: 0;
     height: 100vh;
 }
+
 .firstPage {
     height: 100vh;
 }
 .SecondPage {
     height: 100vh;
 }
+
 
 
 .video-background {
@@ -195,4 +197,22 @@ body {
 .SecondPage {
     height: 100vh;
     background-color: rgba(50, 139, 255, 0.619);
+}
+.content .content1 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.content .content1 a {
+    z-index: 1;
+    position: absolute;
+    top: 150%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    
 }
