made feedback.css

--- a/ForgotPassword.css
+++ b/ForgotPassword.css
@@ -14,16 +14,16 @@ body {
 }
 
 
-.form {
+.ForgotPasswordForm {
     width: 400px;
     border: solid 2px rgb(0, 0, 0);
-    height: 70vh;
+    height: 50vh;
     padding: 30px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 30px;
 }
-form {
+Form {
     display: flex;
     flex-direction: column;
 }
