--- a/Register.css
+++ b/Register.css
@@ -6,11 +6,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
 }
 .formArea {
+    margin-top: 20px;
     width: 400px;
-    height: 600px;
+    height: 1100px;
     background-color: #fff;
     border-radius: 30px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -56,3 +57,19 @@ h1 {
     padding: 10px;
     cursor: pointer;
 }
+
+.RegisterButton:hover {
+    background-color: #000000;
+    color: #fff;
+}
+
+.gender {
+    display: flex;
+    justify-content:center;
+    /* margin: 20px; */
+}
+
+.option {
+    margin: 10px;
+    justify-content: center;
+}   
