--- a/Profile.css
+++ b/Profile.css
@@ -6,7 +6,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f4f4f4;
+    background: linear-gradient(to right, #ffe632, #68b5f4);
 }
 .profile-container {
     background: #fff;
