--- a/TrendingCourses.css
+++ b/TrendingCourses.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f5f5f5;
+    background: linear-gradient(to right, #ffe632, #68b5f4);
     font-family:  super;
     margin: 0;
     padding: 0;
