--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,10 @@ body {
     align-items: center;
     height: 100%;
 }
-
+.Getstarted a {
+    text-decoration: none;
+    color: black;
+}
 .LoginButton {
     width: 5vw;
 }
@@ -172,7 +175,7 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: rgb(222, 232, 177);                                                     
+    background: linear-gradient(to right, #ffe632, #68b5f4);                                                    
 }
 .threeSections .section {
     width: 200px;
@@ -221,8 +224,55 @@ body {
     
 }
 
-
 .ThirdPage {
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.619);
+    /* background-color: rgba(50, 139, 255, 0.619); */
+    /* background-color: rgb(255,230,50);    */
+}
+.content .content2 {
+    height: 100vh;
+}
+.content .content2 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.content .content2 a {
+    z-index: 1;
+    position: absolute;
+    top: 250%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    
+}
+
+
+.footer {
+    background: linear-gradient(to right, #ffe632, #68b5f4); 
+    padding: 20px 0;
+    width: 100%;
+}
+
+
+.footer {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+}
+.footer a {
+    color: rgb(0, 0, 0);
+    margin: 20px 10px;
+    text-decoration: none;
+    font-size: 20px;
+    transition: color 0.3s;
+}
+
+.footer a:hover {
+    background: linear-gradient(to left, #ffe632, #68b5f4); 
+
 }
