--- a/TrendingCourses.css
+++ b/TrendingCourses.css
@@ -13,16 +13,18 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     margin: 0 auto;
+    font-size: large;
     max-width: 1200px;
     padding: 20px;
 }
 #box {
-    background-color: #ffffff;
+    /* background-color: #ffffff; */
+    background-color: #53BDEB;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin: 10px;
     padding: 20px;
-    width: 290px;
+    width: 300px;
     height: 290px;
     display: flex;
     align-items: center;
@@ -31,7 +33,8 @@ body {
 
 a {
     color: #000000;
-    text-decoration: underline 2px #ffc0cb ;
+    text-decoration: #ffc0cb ;
+    font-weight:bold;
 }
 .footer a {
     text-decoration: none;
