--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,11 @@ body {
     font-weight: bold;
     cursor: pointer;
     background-color: rgb(255,230,50);
+
+    /* background-color: #53BDEB; */
+
+    /* background-color: #65c6f0; */
+
     /* background-color: rgb(50, 204, 255); */
     /* background-color: rgb(255, 50, 204); */
     /* background-color: rgb(50, 180, 255); */
@@ -157,6 +162,10 @@ body {
     height: 64px;
     border-radius: 100px;
     background-color: rgb(255,230,50);
+    /* background-color: rgb(50, 255, 255); */
+
+    /* background-color: #65c6f0; */
+    /* background-color: #53BDEB; */
     color: black;
     cursor: pointer;
 }
@@ -175,14 +184,19 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background: linear-gradient(to right, #ffe632, #68b5f4);                                                    
+    /* background: linear-gradient(to right, #ffe632, #68b5f4);                                                     */
+    background: #000;
+    /* background-color: rgb(50, 255, 255); */
 }
 .threeSections .section {
     width: 200px;
     margin: 0;
     padding: 0;
     border: #000000 1px solid;
-    background: #ffffff;
+    /* background: #ffffff; */
+    /* background-color: rgb(255,230,50); */
+    /* background-color: rgb(50, 255, 255); */
+    background-color: #65c6f0;
     border-radius: 10px;
     height: 150px;
     align-items: center;
@@ -192,6 +206,7 @@ body {
 .threeSections .section a {
     text-decoration: none;
     color: black;
+    font-weight: 700;
 }
 
 
@@ -221,7 +236,16 @@ body {
     font-weight: bold;
     text-align: center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    
+ 
+}
+
+.content .content1 a:hover {
+    color: lightgrey;
+ 
+}
+.content .content2 a:hover {
+    color: lightgrey;
+ 
 }
 
 .ThirdPage {
@@ -253,7 +277,8 @@ body {
 
 
 .footer {
-    background: linear-gradient(to right, #ffe632, #68b5f4); 
+    /* background: linear-gradient(to right, #ffe632, #68b5f4);  */
+    background: #ffe632; 
     padding: 20px 0;
     width: 100%;
 }
@@ -274,12 +299,14 @@ body {
     margin: 20px 10px;
     text-decoration: none;
     font-size: 20px;
+    padding: 20px 30px 20px 30px ;
+
     transition: color 0.3s;
 }
 
 .footer a:hover {
-    background: linear-gradient(to left, #ffe632, #68b5f4); 
-
+    background: linear-gradient(to left, #ffe632, #65c6f0); 
+    border-radius: 30px;
 }
 
 .footer {
